--- a/index.html
+++ b/index.html
@@ -1,3 +1,71 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Sodium Correction Calculator</title>
+  <style>
+    body { font-family: system-ui, Arial; max-width: 760px; margin: 24px auto; padding: 0 16px; }
+    label { display:block; margin-top: 12px; font-weight: 600; }
+    input, select, button { width: 100%; padding: 10px; margin-top: 6px; font-size: 16px; }
+    .card { border: 1px solid #ddd; border-radius: 12px; padding: 16px; margin-top: 16px; }
+    .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
+    .warn { color: #b00020; font-weight: 700; }
+    .muted { color: #555; }
+  </style>
+</head>
+<body>
+  <h1>Sodium Correction Calculator</h1>
+  <p class="muted">
+    Mixing model: Na_goal = (Na_current·TBW + Na_IVF·x) / (TBW + x). Solves for x.
+    <br/>
+    Optional: Corrects Na for hyperglycemia (Corrected Na = Na_measured + factor × ((Glucose − baseline)/100)).
+  </p>
+
+  <div class="card">
+    <label>Sex</label>
+    <select id="sex">
+      <option value="male">Male (TBW = 0.6 × weight)</option>
+      <option value="female">Female (TBW = 0.5 × weight)</option>
+    </select>
+
+    <label>Weight (kg)</label>
+    <input id="wt" type="number" step="0.1" placeholder="e.g., 80" />
+
+    <label>Current Na (mEq/L)</label>
+    <input id="naCur" type="number" step="1" placeholder="e.g., 118" />
+
+    <!-- NEW: Hyperglycemia correction inputs -->
+    <label>Glucose (mg/dL) <span class="muted">(optional; for corrected Na)</span></label>
+    <input id="glc" type="number" step="1" placeholder="e.g., 516" />
+
+    <label>Na correction factor (mEq/L per 100 mg/dL glucose)</label>
+    <select id="naCorrFactor">
+      <option value="1.6" selected>1.6 (traditional)</option>
+      <option value="2.4">2.4 (alternative)</option>
+    </select>
+
+    <label>Baseline glucose (mg/dL)</label>
+    <input id="glcBase" type="number" step="1" value="100" />
+    <!-- /NEW -->
+
+    <label>Goal Na (mEq/L)</label>
+    <input id="naGoal" type="number" step="1" placeholder="e.g., 124" />
+
+    <label>IV Fluid</label>
+    <select id="ivf">
+      <option value="D5W">D5W (Na = 0)</option>
+      <option value="0.45NS">0.45% NS (Na = 77)</option>
+      <option value="0.9NS">0.9% NS (Na = 154)</option>
+      <option value="2NS">2% Saline (Na = 342)</option>
+      <option value="3NS">3% Saline (Na = 513)</option>
+    </select>
+
+    <button id="calc">Calculate</button>
+  </div>
+
+  <div id="out" class="card" style="display:none;"></div>
+
 <script>
   function calcTBW(sex, weightKg) {
     const factor = (sex === "male") ? 0.6 : 0.5;
@@ -36,7 +104,7 @@
 
     const glc = parseFloat(document.getElementById("glc").value);
     const glcBase = parseFloat(document.getElementById("glcBase").value);
-    const naCorrFactor = parseFloat(document.getElementById("naCorrFactor").value);
+    const naCorrFactor = parseFloat(document.getElementById("naCorrFactor").value) || 1.6;
 
     const ivf = document.getElementById("ivf").value;
 
@@ -49,7 +117,7 @@
       return;
     }
     if (wt <= 0) {
-      out.innerHTML = `<div class="warn">Weight must be > 0.</div>`;
+      out.innerHTML = `<div class="warn">Weight must be &gt; 0.</div>`;
       return;
     }
 
@@ -60,7 +128,7 @@
     const corr = correctedNaForGlucose(
       naMeasured,
       glc,
-      Number.isFinite(naCorrFactor) ? naCorrFactor : 1.6,
+      naCorrFactor,
       Number.isFinite(glcBase) ? glcBase : 100
     );
     const naCurEffective = corr.naCorrected; // use corrected Na in the mixing model
@@ -109,3 +177,5 @@
     `;
   });
 </script>
+</body>
+</html>
